--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <section class="introduce">
         <!--introduction-->
   <article>
-      <p>The Body Mass Index (BMI) Calculator can be used to calculate BMI value and corresponding weight status while taking age into consideration. Use the "Metric Units" tab for the International System of Units or the "Other Units" tab to convert units into either US or metric units. Note that the calculator also computes the Ponderal Index in addition to BMI, both of which are discussed below in detail.</p>
+      <p>Are you curious about your weight status? Our Body Mass Index (BMI) calculator provides a quick and easy way to assess your health. 
+        By simply entering your height and weight, you can determine your Body Mass Index (BMI), a valuable tool for 
+        understanding your body composition. BMI is a widely used measure that helps identify whether you are underweight, 
+        normal weight, overweight, or obese. Our calculator goes beyond just providing a number; it also offers personalized 
+        insights and tips to help you achieve your health goals. Whether you're looking to lose weight, gain muscle, or simply 
+        maintain a healthy lifestyle, our BMI calculator is a valuable resource.</p>
   </article>
   </section>
 
