--- a/index.html
+++ b/index.html
@@ -79,6 +79,39 @@
 
 </main>
 
+
+<div class="information">
+    <p>Our BMI (Body Mass Index) calculator is a convenient and informative tool designed 
+        to provide you with a quick assessment of your weight status. By simply inputting 
+        your height and weight, you can easily determine your BMI, which serves as a valuable 
+        indicator of your body composition. Our calculator goes beyond just providing a number; 
+        it also offers personalized insights and categorizes your weight status into different ranges, 
+        such as underweight, healthy weight, overweight, or obese. This information can be a helpful 
+        starting point for understanding your overall health and well-being.</p>
+</div>
+
+<div class="kelebihan">
+    <h3>Advantages of Using Our BMI Calculator :</h3>
+    <ul>
+        <li>Speed and Convenience: Obtain your BMI results in seconds.</li>
+        <li>User-Friendly Interface: Simple and intuitive design for easy navigation.</li>
+        <li>No Cost: Our BMI calculator is completely free to use.</li>
+        <li>Accessibility: Available online, anytime, anywhere.</li>
+    </ul>
+</div>
+
+<div class="disclaimer">
+    <h3 class="h-disclaimer">Disclaimer!</h3>
+    <p>While our BMI calculator is a valuable tool for self-assessment, 
+        it is essential to remember that it does not replace professional 
+        medical advice. The information provided by the calculator is intended 
+        for general knowledge and informational purposes only, and does not 
+        constitute medical advice. It is crucial to consult with a qualified 
+        healthcare professional for any health concerns or before making any 
+        decisions related to your health or treatment.</p>
+</div>
+
+
 <!--The modal-->
 <div id="my-modal" class="modal">
 
